# heavy_metal_data

./: .gitignore  README.md  pyproject.toml
code/: scrap_data.py
data/: angrymetalguy_reviews_with_scores_clean.csv  angrymetalguy_reviews_with_scores_raw.csv  df_predictions.csv  df_test.csv  training_history.csv
notebooks/: 1_data_analysis.ipynb
web_scrapping/: scrap_test_data.py
