[project]
name = "heavy-metal-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
